[workspace]
members = [
    "rsjsonnet",
    "rsjsonnet-front",
    "rsjsonnet-lang",
]
resolver = "2"

[workspace.package]
version = "0.4.0-pre"
authors = ["Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>"]
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/eduardosm/rsjsonnet"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
rsjsonnet-front = { path = "rsjsonnet-front", version = "0.4.0-pre" }
rsjsonnet-lang = { path = "rsjsonnet-lang", version = "0.4.0-pre" }

[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"
codegen-units = 1
