[workspace]
members = [
    "rsjsonnet",
    "rsjsonnet-front",
    "rsjsonnet-lang",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
authors = ["Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/eduardosm/rsjsonnet"
license = "MIT OR Apache-2.0"
publish = true

[workspace.dependencies]
rsjsonnet-front = { path = "rsjsonnet-front", version = "0.4.0" }
rsjsonnet-lang = { path = "rsjsonnet-lang", version = "0.4.0" }

[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"
codegen-units = 1
