[package]
name = "rsjsonnet-lang"
description = "A Jsonnet evaluation library"
keywords = ["jsonnet", "library"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bumpalo = "3.16.0"
foldhash = "0.1.3"
hashbrown = "0.15.1"
md-5 = { version = "0.10.6", default-features = false }
saphyr-parser = "0.0.3"
