[package]
name = "rsjsonnet-lang"
description = "A Jsonnet evaluation library"
keywords = ["jsonnet", "library"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bumpalo = "3.17.0"
foldhash = "0.1.4"
hashbrown = "0.15.2"
md-5 = { version = "0.10.6", default-features = false }
saphyr-parser = "0.0.3"
sha1 = { version = "0.10.6", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
