[package]
name = "rsjsonnet"
description = "A command line Jsonnet implementation"
keywords = ["jsonnet", "cli"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[test]]
name = "ui"
harness = false

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
rsjsonnet-front = { workspace = true, features = ["crossterm"] }
rsjsonnet-lang = { workspace = true }

[dev-dependencies]
libtest-mimic = "0.7.3"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"
unified-diff = "0.2.1"
