[package]
name = "rsjsonnet"
description = "A command line Jsonnet implementation"
keywords = ["jsonnet", "cli"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[test]]
name = "ui"
harness = false

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
mimalloc = "0.1.46"
rsjsonnet-front = { workspace = true, features = ["crossterm"] }
rsjsonnet-lang = { workspace = true }

[dev-dependencies]
libtest-mimic = "0.8.1"
shlex = "1.3.0"
unified-diff = "0.2.1"
